--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nrwl/next": "13.7.3",
     "core-js": "^3.6.5",
+    "gray-matter": "^4.0.3",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
