--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "13.7.3",
+    "chokidar": "^3.5.3",
     "core-js": "^3.6.5",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
